[gd_scene load_steps=10 format=2]

[ext_resource path="res://User Interface/Buttons/PlanetButton/Sprites/Planets/Baren.png" type="Texture" id=1]
[ext_resource path="res://User Interface/Buttons/PlanetButton/Sprites/Planets/Ice.png" type="Texture" id=2]
[ext_resource path="res://User Interface/Buttons/PlanetButton/Sprites/Planets/Terran.png" type="Texture" id=3]
[ext_resource path="res://User Interface/Buttons/PlanetButton/Sprites/Planets/Lava.png" type="Texture" id=4]
[ext_resource path="res://User Interface/Buttons/PlanetButton/Sprites/Icons/Icons_26.png" type="Texture" id=5]
[ext_resource path="res://User Interface/Buttons/PlanetButton/Sprites/Icons/Icons_25.png" type="Texture" id=6]
[ext_resource path="res://User Interface/Buttons/PlanetButton/PlanetButton.gd" type="Script" id=7]
[ext_resource path="res://User Interface/Theme/UI_theme.tres" type="Theme" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Planets",
"speed": 5.0
} ]

[node name="PlanetButton" type="TextureButton"]
margin_right = 720.0
margin_bottom = 720.0
theme = ExtResource( 8 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 15, 15 )
frames = SubResource( 1 )
animation = "Planets"

[node name="Arrow_left" type="TextureButton" parent="."]
margin_left = -648.0
margin_top = -120.133
margin_right = -624.0
margin_bottom = -96.1329
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow_right" type="TextureButton" parent="."]
margin_left = 408.0
margin_top = -120.133
margin_right = 432.0
margin_bottom = -96.1329
rect_scale = Vector2( 10, 10 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectButton" type="Button" parent="."]
margin_left = -304.0
margin_top = 528.0
margin_right = 312.0
margin_bottom = 644.0
text = "SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_exiting" from="." to="." method="_on_PlanetButton_tree_exiting"]
[connection signal="pressed" from="Arrow_left" to="." method="_on_Arrow_left_pressed"]
[connection signal="pressed" from="Arrow_right" to="." method="_on_Arrow_right_pressed"]
[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
